# engine

./: CMakeLists.txt  conanfile.txt  notes.org  todo.org
lisp/: data.scm  generator.scm  init.scm
src/: clock.hpp  event.hpp  guile_utils.hpp  main.cpp  sdl2raii  util.hpp  vec2.hpp
src/ntl/: small_vector.hpp
